// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "description": "View transaction 0x12345 on Storchain (Storchain) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Storchain transaction 0x12345 | Storchain",
  },
  "title": "Storchain transaction 0x12345 | Storchain",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "description": "0x12345, balances and analytics on the Storchain (Storchain) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Storchain USDT token details | Storchain",
  },
  "title": "Storchain USDT token details | Storchain",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "description": "Storchainscan is the blockchain explorer for Storchain Neural AI Blockchain.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_placeholder.png",
    "title": "Storchain blocks | Storchain",
  },
  "title": "Storchain blocks | Storchain",
}
`;
